Get labels translating along with state graphs. Prevent scrollbars.

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -31,7 +31,6 @@ $triggers-graph-width: 80%;
 $func-ease-out-quad: cubic-bezier(0.25, 0.46, 0.45, 0.94);
 $label-fade-in-time-init: 2s;
 $label-fade-in-time: 1s;
-$state-emotion-pan-func: ease;
 
 // mixins
 @mixin emotion-color () {
