--- a/scss/sections/_states.scss
+++ b/scss/sections/_states.scss
@@ -3,6 +3,8 @@
 	width: 100%;
 	height: 100%;
 	min-height: 600px;
+	overflow-x: hidden;
+	overflow-y: hidden;
 
 	top: 0;
 	left: 50%;
@@ -40,7 +42,7 @@
 		left: 50%;
 		margin-left: -$states-graph-width/2;
 		min-height: 400px;
-		
+
 		// display: none;
 		opacity: 0.0;
 
@@ -48,7 +50,7 @@
 			// display: block;
 			transition-property: transform, opacity;
 			transition-duration: #{$states-emotions-panX-duration}s;
-			transition-timing-function: $state-emotion-pan-func;
+			transition-timing-function: ease-in-out, cubic-bezier(0.9, 0.0, 0.5, 1.0);
 		}
 
 		&.active {
